gmae 分me 及 friend

--- a/a_m_2up_result_me.html
+++ b/a_m_2up_result_me.html
@@ -48,7 +48,7 @@
             <!--<img src="img/mobile/m_2up_result_me_number.png" />-->
         </div>
         <div id="m_2up_result_me_coupon">
-            <a href="b_m_coupon.html">
+            <a href="a_m_coupon.html">
                 <img src="img/mobile/m_2up_result_me_coupon.png" />
             </a>
         </div>
