新增  game end頁 coupon list 日期 切文字

--- a/a_m_coupon_list.html
+++ b/a_m_coupon_list.html
@@ -48,6 +48,7 @@
             <div class="m_coupon_list_item">
                 <div class="m_coupon_list_item_img">
                     <img src="img/mobile/m_coupon_list_coupon1.png" />
+                    <div class="m_coupon_list_item_date">2015/1/10 獲得</div>
                     <div class="m_coupon_list_item_id">兌換序號：xxxxxxxxxxxx</div>
                 </div>
 
@@ -58,6 +59,7 @@
             <div class="m_coupon_list_item">
                 <div class="m_coupon_list_item_img">
                     <img src="img/mobile/m_coupon_list_coupon1.png" />
+                    <div class="m_coupon_list_item_date">2015/1/10 獲得</div>
                     <div class="m_coupon_list_item_id">兌換序號：xxxxxxxxxxxx</div>
                 </div>
 
@@ -67,6 +69,7 @@
             <div class="m_coupon_list_item">
                 <div class="m_coupon_list_item_img">
                     <img src="img/mobile/m_coupon_list_coupon1.png" />
+                    <div class="m_coupon_list_item_date">2015/1/10 獲得</div>
                     <div class="m_coupon_list_item_id">兌換序號：xxxxxxxxxxxx</div>
                 </div>
 
@@ -76,6 +79,7 @@
             <div class="m_coupon_list_item">
                 <div class="m_coupon_list_item_img">
                     <img src="img/mobile/m_coupon_list_coupon1.png" />
+                    <div class="m_coupon_list_item_date">2015/1/10 獲得</div>
                     <div class="m_coupon_list_item_id">兌換序號：xxxxxxxxxxxx</div>
                 </div>
 
@@ -85,6 +89,7 @@
             <div class="m_coupon_list_item">
                 <div class="m_coupon_list_item_img">
                     <img src="img/mobile/m_coupon_list_coupon1.png" />
+                    <div class="m_coupon_list_item_date">2015/1/10 獲得</div>
                     <div class="m_coupon_list_item_id">兌換序號：xxxxxxxxxxxx</div>
                 </div>
 
@@ -94,6 +99,7 @@
             <div class="m_coupon_list_item">
                 <div class="m_coupon_list_item_img">
                     <img src="img/mobile/m_coupon_list_coupon1.png" />
+                    <div class="m_coupon_list_item_date">2015/1/10 獲得</div>
                     <div class="m_coupon_list_item_id">兌換序號：xxxxxxxxxxxx</div>
                 </div>
 
@@ -113,7 +119,7 @@
             </a>
         </div>
         <div id="nav_home" style="left: 498px;">
-            <a href="m_otc_home.html">
+            <a href="b_m_otc_home.html">
                 <img src="img/mobile/nav_home.png" />
             </a>
         </div>
