新增pc 首頁按鈕動態
Signed-off-by: georgelynch <georgelynch1980@hotmail.com>

--- a/a_index.html
+++ b/a_index.html
@@ -51,12 +51,12 @@
         </div>
         <div id="play_game_1up">
             <a href="a_game_1up_start.html">
-                <img src="img/home/play_game_1up.png" />
+                <!--<img src="img/home/play_game_1up.png" />-->
             </a>
         </div>
         <div id="play_game_2up">
             <a href="a_game_2up_start.html">
-                <img src="img/home/play_game_2up.png" />
+                <!--<img src="img/home/play_game_2up.png" />-->
             </a>
         </div>
         <div id="SP">
